<resources>
    <string name="app_name">Diaa</string>
    <string name="start">modern contemporary house</string>
    <string name="start2">Home furniture design for the modern contemporary home at the best prices</string>
    <string name="start3">Porem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie,dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum. </string>

    <string name="fill">Fill your home with modern, contemporary furniture</string>
    <string name="log">Log in</string>
    <string name="log1">Log in?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="pas">Pasword</string>
    <string name="user">Uesr Name</string>
    <string name="or">____________________________or____________________________</string>
    <string name="log2">forget password?</string>
    <string name="ferst">Ferst Name</string>
    <string name="last">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="Confimpas">Confim password</string>
    <string name="modern">modern bedroom</string>
    <string name="many">999$</string>
    <string name="hom1">Sing is sofe, the thes shape and mullple coicrs</string>
    <string name="offers">New Offers</string>
    <string name="offers1">Rival 80% Discount</string>
    <string name="lu">Luxury single sofa</string>
    <string name="selected">Selected items (12)</string>
    <string name="total">Total price :999$</string>
    <string name="conti">Continuation</string>
    <string name="homeaddress">Home address Gaza_Deir al-Balah_Al-Balad - next to the Technical College</string>
    <string name="worktitle">Work title Gaza - Omar Al-Mukhtar Street</string>
    <string name="payment">Payment information</string>
    <string name="pay">Pay with PayPal</string>
    <string name="curr">Current Balance</string>
    <string name="confirm">Confirm the order</string>
    <string name="timer">Timer : 12:00</string>
    <string name="confirmdate">Confirm Date</string>
    <string name="Cancelorder">Cancel order</string>
    <string name="address">The Address</string>
    <string name="mobilenumber">Mobile number</string>
    <string name="paymentmethods">Payment Methods</string>
    <string name="setting">Setting And Peivacy</string>
    <string name="holp">Holp And Feacbok</string>
    <string name="sing">Sing Out</string>
    <string name="confirm_date">Confirm Date</string>
    <string name="cancel_order">Cancel order</string>
    <string name="successful">Your Order Was Successful</string>
    <string name="back_to_home">Back to Home</string>
    <string name="order">Order Delivery Address</string>

</resources>