<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    tools:context=".MainActivity8">

    <include
        layout="@layout/top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/textView_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Shopping Cart"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp" />

    <GridView
        android:id="@+id/gv_products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:numColumns="1"
        android:horizontalSpacing="10dp"
        android:verticalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:layout_margin="10dp" />

    <LinearLayout
        android:id="@+id/footer_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white0"
        android:layout_margin="10dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_selected_items"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/selected"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_total_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="14sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/conti"
            android:textAllCaps="false"
            android:backgroundTint="@color/orang"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <include
        layout="@layout/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</LinearLayout>
