<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:layout_marginTop="25dp"
    tools:context=".MainActivity13">

    <include
        android:id="@+id/include"
        layout="@layout/top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/timer"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toBottomOf="@+id/textView39"
        tools:ignore="MissingConstraints" />

    <View
    android:id="@+id/view25"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="20dp"
    android:layout_marginTop="20dp"
    android:background="@color/white0"
    app:layout_constraintTop_toBottomOf="@+id/textView40"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteX="-52dp" />

    <ImageView
        android:id="@+id/button33"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_margin="20dp"
        android:src="@drawable/tabler_check"
        android:background="@color/white1"
        app:layout_constraintStart_toStartOf="@+id/view25"
        app:layout_constraintTop_toTopOf="@+id/view25"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/lu"
        app:layout_constraintBottom_toBottomOf="@+id/button33"
        app:layout_constraintStart_toEndOf="@+id/button33"
        app:layout_constraintTop_toTopOf="@+id/button33" />

    <ImageView
        android:id="@+id/button37"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:src="@drawable/tabler_check"
        android:background="@color/white1"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="@+id/button33"
        app:layout_constraintStart_toStartOf="@+id/button33"
        app:layout_constraintTop_toBottomOf="@+id/button33"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lu"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/button37"
        app:layout_constraintStart_toEndOf="@+id/button37"
        app:layout_constraintTop_toTopOf="@+id/button37"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/button38"
        android:layout_width="47dp"
        android:layout_height="38dp"
        android:layout_margin="20dp"
        android:src="@drawable/tabler_check"
        android:background="@color/white1"
        app:layout_constraintEnd_toEndOf="@+id/button37"
        app:layout_constraintStart_toStartOf="@+id/button37"
        app:layout_constraintTop_toBottomOf="@+id/button37"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lu"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/button38"
        app:layout_constraintStart_toEndOf="@+id/button38"
        app:layout_constraintTop_toTopOf="@+id/button38"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/orang"
        android:text="@string/confirm_date"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/view25"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/white1"
        android:text="@string/cancel_order"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp" />

    <include
        layout="@layout/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>